--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -27,9 +27,9 @@
     <div class="container1">
     <h1>Calculate Hypoteneous</h1>
     <label >a =</label >
-    <input class="side-input" type="number" />
+    <input class="side-input" type="number" name="test_name" min="1" oninput="validity.valid||(value='');"/>
     <label>b =</label>
-    <input class="side-input" type="number" />
+    <input class="side-input" type="number" name="test_name" min="1" oninput="validity.valid||(value='');"/>
     <button id="hypotenous-btn">Calculate Hypoteneous</button>
     <div id="output"></div>
     </div>
