--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <div class="container1">
     <h1>is Triangle?</h1>
     <label for="angle1">angle1</label>
-    <input class="angle-input" type="number" />
+    <input class="angle-input" type="number" name="test_name" min="1" oninput="validity.valid||(value='');"/>
     <label for="angle2">angle2</label>
-    <input class="angle-input" type="number" />
+    <input class="angle-input" type="number" name="test_name" min="1" oninput="validity.valid||(value='');"/>
     <label for="angle3">angle3</label>
-    <input class="angle-input" type="number" />
+    <input class="angle-input" type="number" name="test_name" min="1" oninput="validity.valid||(value='');"/>
     <button id="is-triangle-btn">Is Triangle</button>
     <div id="output"></div>
     </div>
