Make a New Page for Area of Triangle

--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -21,6 +21,9 @@
             <li class="list-item-inline">
                 <a class="link link-active" href="quiz.html">Quiz</a>
             </li>
+            <li class="list-item-inline">
+                <a class="link link-active" href="area.html">Area of Triangle</a>
+            </li>
     
         </ul>
     </nav>
