--- a/area.html
+++ b/area.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Is Triangle</title>
+    <title>Calculate Hypoteneous</title>
     <link href="style.css" rel="stylesheet" />
 
 </head>
@@ -28,18 +28,16 @@
         </ul>
     </nav>
     <div class="container1">
-    <h1>is Triangle?</h1>
-    <label for="angle1">angle1</label>
-    <input class="angle-input" type="number" name="test_name" min="1" oninput="validity.valid||(value='');"/>
-    <label for="angle2">angle2</label>
-    <input class="angle-input" type="number" name="test_name" min="1" oninput="validity.valid||(value='');"/>
-    <label for="angle3">angle3</label>
-    <input class="angle-input" type="number" name="test_name" min="1" oninput="validity.valid||(value='');"/>
-    <button id="is-triangle-btn">Is Triangle</button>
+    <h1>Calculate Area of Triangle</h1>
+    <label >a =</label >
+    <input class="side-input" type="number" name="test_name" min="1" oninput="validity.valid||(value='');"/>
+    <label>b =</label>
+    <input class="side-input" type="number" name="test_name" min="1" oninput="validity.valid||(value='');"/>
+    <button id="hypotenous-btn">Calculate Area of Triangle</button>
     <div id="output"></div>
     </div>
+    
 
-
-<script src="istriangle.js"></script>
+ <script src="area.js"></script>    
 </body>
 </html>
