Do all Changes sugested by Tanay Bhaiya

--- a/area.html
+++ b/area.html
@@ -29,11 +29,13 @@
     </nav>
     <div class="container1">
     <h1>Calculate Area of Triangle</h1>
-    <label >a =</label >
+    <label>A =</label >
     <input class="side-input" type="number" name="test_name" min="1" oninput="validity.valid||(value='');"/>
-    <label>b =</label>
+    <label>B =</label>
     <input class="side-input" type="number" name="test_name" min="1" oninput="validity.valid||(value='');"/>
-    <button id="hypotenous-btn">Calculate Area of Triangle</button>
+    <label>C =</label>
+    <input class="side-input" type="number" name="test_name" min="1" oninput="validity.valid||(value='');"/>
+    <button id="triangle-btn">Calculate Area of Triangle</button>
     <div id="output"></div>
     </div>
     
